# duck-db-as-a-vector-db

./: README.md  pyproject.toml  streamlit_frontend.py
src/: constants.py  db_setup.py  language_models.py  loggers.py  search.py
